Add Media entity to API
- Route is /media (plural)
