# apps/api/swagger.yaml
@@ -38,6 +38,37 @@ components:
         responses:
           type: object
           nullable: true
+    Media:
+      properties:
+        step_id:
+          type: integer
+          nullable: true
+        task_id:
+          type: integer
+          nullable: true
+        title:
+          type: string
+        category:
+          type: string
+        description:
+          type: string
+          nullable: true
+        url:
+          type: string
+          format: uri
+          nullable: true
+        image:
+          type: string
+          format: uri
+          nullable: true
+        published_by:
+          type: integer
+          nullable: true
+          format: org-id
+        type:
+          nullable: true
+          type: string
+          enum: [TASK_CONTENT, TASK_RESOURCE, STORY, GENERAL_EDUCATION]
     Step:
       properties:
         text:
@@ -589,6 +620,74 @@ paths:
       responses:
         '200':
           description: The number of Messages deleted (should be 1 or 0)
+          content:
+            application/json:
+              type: integer
+
+  /media:
+    get:
+      summary: Return a list of Media
+      tags: [media]
+      responses:
+        '200':
+          description: A JSON array of Media objects
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#components/schemas/Media'
+    post:
+      summary: Create a new media
+      tags: [media]
+      requestBody:
+        description: New Media to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Media'
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+  /media/{id}:
+    get:
+      summary: Return a single Media by ID
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Numeric id
+      tags: [media]
+      responses:
+        '200':
+          description: A JSON object representing a single Media
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/Media'
+    delete:
+      summary: Delete Media by the given id
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Numeric id to be deleted
+      tags: [media]
+      responses:
+        '200':
+          description: The number of Media objects deleted (should be 1 or 0)
           content:
             application/json:
               type: integer
